[tool.poetry]
name = "Polyphony"
version = "0.1.0"
description = "A more robust version of PluralKit"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "> 3.8"
"discord.py" = "~1.6"
python-dotenv = "^0.15.0"
disputils = "^0.1.3"
requests = "^2.25.1"
emoji = "^0.6.0"
gitpython = "^3.1.11"

[tool.poetry.dev-dependencies]
black = {extras = ["d"], version = "^20.8b1"}
flake8 = "^3.8.4"
pydocstyle = "^5.1.1"
jedi = "^0.17.0"
mypy = "^0.790"

[tool.poetry.scripts]
polyphony = "polyphony:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
