[tool.poetry]
name = "Polyphony"
version = "1.1.0b"
description = "A more robust version of PluralKit"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
"discord.py" = "~1.6"
python-dotenv = "^0.15.0"
disputils = "^0.1.3"
requests = "^2.25.1"
emoji = "^0.6.0"
gitpython = "^3.1.11"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
black = {extras = ["d"], version = "^22.6.0"}
flake8 = "^3.8.4"
pydocstyle = "^5.1.1"
jedi = "^0.17.0"
mypy = "^0.971"

[tool.poetry.scripts]
polyphony = "polyphony:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
